# Project_Alpha

./: .envExample  .gitignore  dagster.yaml  pyproject.toml  workspace.yaml
src/api/: main.py
src/api/database/: connection.py  schema.py
src/api/models/: login.py
src/api/router/: __init__.py  login.py
src/api/router/login/: auth.py
src/data_processing/: definitions.py  month_partition.py  schedule.py
src/data_processing/modules/: __init__.py  asset_factory.py  load_pdf.py
src/data_processing/modules/documents_llms/: load_pdf.py
src/data_processing/modules/extract/: NVDA.py
src/llm/agent/: model.py  state.py
src/llm/cache/: cache_manager.py
src/llm/database/: vectordb.py
src/llm/testing/: speach_to_text.py
src/llm/utils/: __init__.py  register.py  workflow_adder.py
src/transformation/: dbt_assets.py
src/transformation/dbt-project/: dbt_project.yml
